analytics/docker/i2ap-listener/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: listener
  name: listener
  namespace: i2ap
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: listener
    spec:
      containers:
      - name: listener
        image: us.gcr.io/tt-cust-analytics/i2ap-listener:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3101
          name: listener
        volumeMounts:
          - name: i2ap-gcloud-credentials
            mountPath: /secrets
            readOnly: true
      volumes:
        - name: i2ap-gcloud-credentials
          secret:
            secretName: i2ap-gcloud-credentials
