analytics/docker/i2ap-listener/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: listener-service
  namespace: i2ap
spec:
  type: NodePort
  selector:
    app: listener
  ports:
    - protocol: TCP
      port: 3101
      targetPort: 3101
      name: listener
